# CPP_projects

./: README.md
ML_IRIS_Knn_Classifier/: Iris_KNN_Classifier.cpp  Readme.txt
Netlist_parser_and _logic_optimizer/: Readme.txt  main.cpp  netlist_optimizer.h  netlist_optmizer.cpp
Quine_McCluskey_Algorithm/: Quine_McCluskey_Algorithm.cpp  Readme.txt  Sample_output.txt
Simple_Digital_Circuit_Simulator/: ReadMe.txt  command_to_run.txt  digital_circuit_simulator.cpp  full_adder.net  half_adder.net
Simple_Verilog_parser/: CMakeLists.txt  ReadMe.md  Readme.txt  main.cpp  test_verilog.v  usage_commands.txt  verilog_parser.cpp  verilog_parser.h
